[package]
name = "bevy_stdb"
version = "0.5.0"
edition = "2024"
rust-version = "1.93"
description = "A Bevy-native integration for SpacetimeDB with table messages, subscriptions, and reconnect support."
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/onx2/bevy_stdb"
keywords = ["bevy", "spacetimedb", "database", "multiplayer", "ecs"]
categories = ["game-development", "network-programming", "database"]
exclude = [
    ".github/",
]

[dependencies]
bevy_app = "0.18"
bevy_ecs = "0.18"
bevy_state = "0.18"
bevy_time = "0.18"
spacetimedb-sdk = "2.1"
wasm-bindgen-futures = { version = "0.4", optional = true }
crossbeam-channel = "0.5"

[features]
default = []
browser = ["spacetimedb-sdk/browser", "wasm-bindgen-futures"]


[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
